// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`relations overrides edges a byName curveness override (gateway to api bowed hard, the rest nearly straight) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":273.539105,"y":203.539105}},
{"type":"quadraticCurveTo","props":{"cpx":201.033695,"cpy":-144.486865,"x":128.528284,"y":193.755123}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":273.539105,"y":203.539105}},{"type":"quadraticCurveTo","props":{"cpx":201.033695,"cpy":-144.486865,"x":128.528284,"y":193.755123}}]}},
{"type":"setTransform","props":{"a":-0.977788,"b":-0.209598,"c":0.209598,"d":-0.977788,"e":128.528284,"f":193.755123}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":273.539105,"y":203.539105}},
{"type":"quadraticCurveTo","props":{"cpx":203.535568,"cpy":133.535568,"x":133.532032,"y":63.532032}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":273.539105,"y":203.539105}},{"type":"quadraticCurveTo","props":{"cpx":203.535568,"cpy":133.535568,"x":133.532032,"y":63.532032}}]}},
{"type":"setTransform","props":{"a":0.707107,"b":-0.707107,"c":0.707107,"d":0.707107,"e":133.532032,"f":63.532032}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":126.460895,"y":203.539105}},
{"type":"quadraticCurveTo","props":{"cpx":196.464432,"cpy":133.535568,"x":266.467968,"y":63.532032}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":126.460895,"y":203.539105}},{"type":"quadraticCurveTo","props":{"cpx":196.464432,"cpy":133.535568,"x":266.467968,"y":63.532032}}]}},
{"type":"setTransform","props":{"a":0.707107,"b":0.707107,"c":-0.707107,"d":0.707107,"e":266.467968,"f":63.532032}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":126.460895,"y":56.460895}},
{"type":"quadraticCurveTo","props":{"cpx":195.185666,"cpy":77.078326,"x":263.910438,"y":59.160389}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":126.460895,"y":56.460895}},{"type":"quadraticCurveTo","props":{"cpx":195.185666,"cpy":77.078326,"x":263.910438,"y":59.160389}}]}},
{"type":"setTransform","props":{"a":0.252287,"b":0.967653,"c":-0.967653,"d":0.252287,"e":263.910438,"f":59.160389}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":273.539105,"f":203.539105}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":126.460895,"f":203.539105}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":126.460895,"f":56.460895}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":273.539105,"f":56.460895}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":273.539105,"f":218.539105}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Gateway","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":126.460895,"f":218.539105}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"API","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":126.460895,"f":71.460895}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Web","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":273.539105,"f":71.460895}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"DB","x":0,"y":6,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`relations overrides edges a byName hideFrom override (gateway to api missing, three lines left) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":273.539105,"y":203.539105}},
{"type":"lineTo","props":{"x":133.531963,"y":63.531963}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":273.539105,"y":203.539105}},{"type":"lineTo","props":{"x":133.531963,"y":63.531963}}]}},
{"type":"setTransform","props":{"a":0.707107,"b":-0.707107,"c":0.707107,"d":0.707107,"e":133.531963,"f":63.531963}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":126.460895,"y":203.539105}},
{"type":"lineTo","props":{"x":266.468037,"y":63.531963}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":126.460895,"y":203.539105}},{"type":"lineTo","props":{"x":266.468037,"y":63.531963}}]}},
{"type":"setTransform","props":{"a":0.707107,"b":0.707107,"c":-0.707107,"d":0.707107,"e":266.468037,"f":63.531963}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":126.460895,"y":56.5}},
{"type":"lineTo","props":{"x":263.539105,"y":56.5}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":126.460895,"y":56.5}},{"type":"lineTo","props":{"x":263.539105,"y":56.5}}]}},
{"type":"setTransform","props":{"a":0,"b":1,"c":-1,"d":0,"e":263.539105,"f":56.460895}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":273.539105,"f":203.539105}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":126.460895,"f":203.539105}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":126.460895,"f":56.460895}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":273.539105,"f":56.460895}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":273.539105,"f":218.539105}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Gateway","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":126.460895,"f":218.539105}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"API","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":126.460895,"f":71.460895}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Web","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":273.539105,"f":71.460895}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"DB","x":0,"y":6,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`relations overrides nodes a byName color override (DB drawn red, the other three on the palette) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":273.539105,"y":203.5}},
{"type":"lineTo","props":{"x":136.460895,"y":203.5}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":273.539105,"y":203.5}},{"type":"lineTo","props":{"x":136.460895,"y":203.5}}]}},
{"type":"setTransform","props":{"a":0,"b":-1,"c":1,"d":0,"e":136.460895,"f":203.539105}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":273.539105,"y":203.539105}},
{"type":"lineTo","props":{"x":133.531963,"y":63.531963}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":273.539105,"y":203.539105}},{"type":"lineTo","props":{"x":133.531963,"y":63.531963}}]}},
{"type":"setTransform","props":{"a":0.707107,"b":-0.707107,"c":0.707107,"d":0.707107,"e":133.531963,"f":63.531963}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":126.460895,"y":203.539105}},
{"type":"lineTo","props":{"x":266.468037,"y":63.531963}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":126.460895,"y":203.539105}},{"type":"lineTo","props":{"x":266.468037,"y":63.531963}}]}},
{"type":"setTransform","props":{"a":0.707107,"b":0.707107,"c":-0.707107,"d":0.707107,"e":266.468037,"f":63.531963}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":126.460895,"y":56.5}},
{"type":"lineTo","props":{"x":263.539105,"y":56.5}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":126.460895,"y":56.5}},{"type":"lineTo","props":{"x":263.539105,"y":56.5}}]}},
{"type":"setTransform","props":{"a":0,"b":1,"c":-1,"d":0,"e":263.539105,"f":56.460895}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":273.539105,"f":203.539105}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":126.460895,"f":203.539105}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":126.460895,"f":56.460895}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":273.539105,"f":56.460895}},
{"type":"fillStyle","props":{"value":"#f2495c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":273.539105,"f":218.539105}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Gateway","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":126.460895,"f":218.539105}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"API","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":126.460895,"f":71.460895}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Web","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":273.539105,"f":71.460895}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"DB","x":0,"y":6,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`relations overrides nodes a byName hideFrom override on a node (web gone, and both links that touched it) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":252,"y":220.066642}},
{"type":"lineTo","props":{"x":104.660254,"y":135}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":252,"y":220.066642}},{"type":"lineTo","props":{"x":104.660254,"y":135}}]}},
{"type":"setTransform","props":{"a":0.5,"b":-0.866025,"c":0.866025,"d":0.5,"e":104.660254,"f":135}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":96,"y":130}},
{"type":"lineTo","props":{"x":243.339746,"y":44.933358}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":96,"y":130}},{"type":"lineTo","props":{"x":243.339746,"y":44.933358}}]}},
{"type":"setTransform","props":{"a":0.5,"b":0.866025,"c":-0.866025,"d":0.5,"e":243.339746,"f":44.933358}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":252,"f":220.066642}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":96,"f":130}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":252,"f":39.933358}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":252,"f":235.066642}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Gateway","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":96,"f":145}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"API","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":252,"f":54.933358}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"DB","x":0,"y":6,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`relations overrides nodes a byName override on a node only the edges imply (db red, larger, and renamed Database) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":-7.0096}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":274.7767,"y":202.280324}},
{"type":"lineTo","props":{"x":140.293583,"y":206.847494}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":274.7767,"y":202.280324}},{"type":"lineTo","props":{"x":140.293583,"y":206.847494}}]}},
{"type":"setTransform","props":{"a":-0.033941,"b":-0.999424,"c":0.999424,"d":-0.033941,"e":140.293583,"f":199.837894}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":-7.0096}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":274.7767,"y":202.280324}},
{"type":"lineTo","props":{"x":127.91365,"y":69.661318}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":274.7767,"y":202.280324}},{"type":"lineTo","props":{"x":127.91365,"y":69.661318}}]}},
{"type":"setTransform","props":{"a":0.670199,"b":-0.742182,"c":0.742182,"d":0.670199,"e":127.91365,"f":62.651718}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":-7.0096}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":130.299345,"y":207.186907}},
{"type":"lineTo","props":{"x":258.307279,"y":65.430183}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":130.299345,"y":207.186907}},{"type":"lineTo","props":{"x":258.307279,"y":65.430183}}]}},
{"type":"setTransform","props":{"a":0.742182,"b":0.670199,"c":-0.670199,"d":0.742182,"e":258.307279,"f":58.420583}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":-7.0096}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":120.491832,"y":62.959332}},
{"type":"lineTo","props":{"x":252.739824,"y":53.966434}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":120.491832,"y":62.959332}},{"type":"lineTo","props":{"x":252.739824,"y":53.966434}}]}},
{"type":"setTransform","props":{"a":0.067844,"b":0.997696,"c":-0.997696,"d":0.067844,"e":252.739824,"f":46.956834}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":274.7767,"f":195.270724}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":130.299345,"f":200.177307}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":120.491832,"f":55.949732}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":17,"b":0,"c":0,"d":17,"e":269.700655,"f":45.803493}},
{"type":"fillStyle","props":{"value":"#f2495c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":274.7767,"f":210.270724}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"gateway","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":130.299345,"f":215.177307}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"api","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":120.491832,"f":70.949732}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"web","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":269.700655,"f":67.803493}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"Database","x":0,"y":6,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;
